1998-08-27  Tanaka Akira  <akr@jaist.ac.jp>

	* emu-e20.el (ccl-use-symbol-as-program): New constant.
	(make-ccl-coding-system): New function.
	(ccl-encoder-eof-block-is-broken): New constant.
	(ccl-decoder-eof-block-is-broken): New constant.
	(ccl-eof-block-is-broken): New constant.
	(ccl-execute): Redefine if `ccl-use-symbol-as-program' is nil.
	(ccl-execute-on-string): Ditto.

1998-08-24  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu-20.el (mime-charset-coding-system-alist): Add `unknown' and
	`x-unknown'.

1998-08-12  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu-x20.el: Redefine coding-system `ctext' if `ctext-dos' is not
	found.

1998-08-12  Katsumi Yamaoka   <yamaoka@jpl.org>

	* emu-nemacs.el, emu-mule.el (decode-mime-charset-region): Add new
	argument `lbt'.
	(decode-mime-charset-string): Likewise.

	* emu-mule.el (mime-charset-to-coding-system):  Regard `CRLF',
	`LF', `CR' as line break code type.

1998-08-11  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu-latin1.el, emu-nemacs.el (write-region-as-raw-text-CRLF):
	Fix regexp to canonicalize line break code.

	* emu-mule.el (write-region-as-raw-text-CRLF): Use
	`write-region-as-binary' to specify `lockname' in MULE 2.3 based
	on 19.34.

1998-08-11  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu-x20.el: Redefine coding-system `iso-2022-jp-2' if
	`iso-2022-jp-2-dos' is not found.

1998-08-11  Katsumi Yamaoka   <yamaoka@jpl.org>

	* emu-mule.el (write-region-as-raw-text-CRLF): New function.

	* emu-18.el (generate-new-buffer-name): New function (Emacs 19
	emulating function).

1998-08-10  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu-nemacs.el, emu-latin1.el (write-region-as-raw-text-CRLF):
	New function.

	* emu-20.el (write-region-as-raw-text-CRLF): Renamed from
	`write-region-as-CRLF'.

1998-08-10  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu-latin1.el, emu-e20.el (decode-mime-charset-region): Add new
	argument `lbt'.
	(decode-mime-charset-string): Likewise.
