@@ -1,5 +1,16 @@
 1998-08-27  Tanaka Akira  <akr@jaist.ac.jp>
 
+        * emu-e20.el (ccl-use-symbol-as-program): Use
+	`ccl-execute-on-string' instead of `make-coding-system' for
+	avoiding the error "Coding system already exists".
+
+1998-08-27  Tanaka Akira  <akr@jaist.ac.jp>
+
+        * emu-e20.el (test-ccl-eof-block-cs): Check if it is already
+	defined.
+
+1998-08-27  Tanaka Akira  <akr@jaist.ac.jp>
+
 	* emu-e20.el (ccl-use-symbol-as-program): New constant.
 	(make-ccl-coding-system): New function.
 	(ccl-encoder-eof-block-is-broken): New constant.
